--- a/pushdockerimage/Jenkinsfile
+++ b/pushdockerimage/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         stage('Build Image') {
             steps {
                 //sh 'docker build -t ebowsaah/jenkinstest ./pushdockerimage/' (this will use the tag latest)
-		sh 'docker build -t ebowsaah/jenkinstest:$BUILD_NUMBER ./pushdockerimage/'
+		sh 'docker build -t ebowsaah/test:$BUILD_NUMBER .'
             }
         }
         stage('Docker Login') {
@@ -25,7 +25,7 @@ pipeline {
         stage('Docker Push') {
             steps {
 		//sh 'docker push ebowsaah/jenkinstest' (this will use the tag latest)    
-                sh 'docker push ebowsaah/jenkinstest:$BUILD_NUMBER'
+                sh 'docker push ebowsaah/test:$BUILD_NUMBER'
                 }
             }
         }
@@ -35,4 +35,3 @@ pipeline {
 		}
 	 }
     }
-
