--- a/pushdockerimage/Jenkinsfile
+++ b/pushdockerimage/Jenkinsfile
@@ -12,8 +12,8 @@ pipeline {
         }
         stage('Build Image') {
             steps {
-                //sh 'docker build -t ebowsaah/jenkinstest ./pushdockerimage/' (this will use the tag latest)
-		sh 'docker build -t ebowsaah/test:$BUILD_NUMBER .'
+                //sh 'docker build -t ebowsaa/jenkinstest ./pushdockerimage/' (this will use the tag latest)
+		sh 'docker build -t ebowsaah/jenkinstest:$BUILD_NUMBER ./pushdockerimage/'
             }
         }
         stage('Docker Login') {
@@ -24,8 +24,8 @@ pipeline {
             }
         stage('Docker Push') {
             steps {
-		//sh 'docker push ebowsaah/jenkinstest' (this will use the tag latest)    
-                sh 'docker push ebowsaah/test:$BUILD_NUMBER'
+		//sh 'docker push raj80dockerid/jenkinstest' (this will use the tag latest)    
+                sh 'docker push ebowsaah/jenkinstest:$BUILD_NUMBER'
                 }
             }
         }
