--- a/pushdockerimage/Jenkinsfile
+++ b/pushdockerimage/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         stage('Build Image') {
             steps {
                 //sh 'sudo docker build -t ebowsaa/jenkinstest ./pushdockerimage/' (this will use the tag latest)
-		sh 'docker build -t ebowsaah/jenkinstest:$BUILD_NUMBER ./pushdockerimage/'
+		sh 'sudo docker build -t ebowsaah/jenkinstest:$BUILD_NUMBER ./pushdockerimage/'
             }
         }
         stage('Docker Login') {
